@@ -7,6 +7,7 @@ import (
 
 	"github.com/stretchr/testify/assert"
 
+	"github.com/elastic/beats/libbeat/common"
 	"github.com/elastic/go-ucfg/yaml"
 )
 
@@ -59,8 +60,8 @@ func TestConfig(t *testing.T) {
 					RateLimit:    1000,
 					AllowOrigins: []string{"example*"},
 					SourceMapping: &SourceMapping{
-						Cache: &Cache{Expiration: 10 * time.Minute},
-						Index: "apm-test*",
+						Cache:        &Cache{Expiration: 10 * time.Minute},
+						IndexPattern: "apm-test*",
 					},
 					LibraryPattern:      "pattern",
 					ExcludeFromGrouping: "group_pattern",
@@ -99,7 +100,7 @@ func TestConfig(t *testing.T) {
 					RateLimit:    0,
 					AllowOrigins: nil,
 					SourceMapping: &SourceMapping{
-						Index: "",
+						IndexPattern: "",
 					},
 				},
 			},
@@ -155,5 +156,30 @@ func TestIsEnabled(t *testing.T) {
 			isEnabled := test.config.isEnabled()
 			assert.Equal(t, b, isEnabled, "ssl config but should be %v", b)
 		})
+	}
+}
+
+func TestSmapIndex(t *testing.T) {
+	cases := []struct {
+		version      string
+		indexPattern string
+		smapIndex    string
+	}{
+		{version: "", indexPattern: "", smapIndex: ""},
+		{version: "6.2.0", indexPattern: "apm-%{[beat.version]}", smapIndex: "apm-6.2.0"},
+		{version: "6.2.0", indexPattern: "apm-smap", smapIndex: "apm-smap"},
+	}
+
+	esConfig, _ := common.NewConfigFrom(map[string]interface{}{
+		"hosts": []string{"http://localhost:9898"},
+	})
+	enabled := true
+	for _, test := range cases {
+		c := defaultConfig(test.version)
+		c.Frontend.Enabled = &enabled
+		c.Frontend.SourceMapping.esConfig = esConfig
+		c.Frontend.SourceMapping.IndexPattern = test.indexPattern
+		c.Frontend.SmapMapper()
+		assert.Equal(t, test.smapIndex, c.Frontend.SourceMapping.index)
 	}
 }
