@@ -10,7 +10,7 @@ import (
 )
 
 func TestNotifyUpServerDown(t *testing.T) {
-	config := defaultConfig()
+	config := defaultConfig("7.0.0")
 	var saved []beat.Event
 	var reporter = func(events []beat.Event) error {
 		saved = append(saved, events...)
